# ft_mallco

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: ft_malloc.h
src/: calloc.c  debug.c  free.c  ft_malloc.c  malloc.c  realloc.c  show_alloc_mem.c  show_alloc_mem_ex.c  zone_utils.c
tests/: MMAP_CHECK.md  Makefile  long_test.c  test_basic.c  test_comprehensive.c  test_long.c  test_scribble.c
